--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "uniqid": "^5.3.0",
+    "unique-string": "^2.0.0",
+    "uniqueid": "^1.0.0"
   }
 }
